Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,58 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - master
 
 pool:
-  vmImage: 'windows-2019'
-  
+ vmImage: 'windows-2019'
 
-  
-container: mcr.microsoft.com/dotnet/core/sdk:3.1
+variables:
+ BuildConfiguration: 'Release'
 
-steps:
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: build
-
-  - task: DotNetCoreCLI@2
-    inputs:
-        command: 'test'
-        projects: '**/*Tests*.csproj*'
+stages:
+- stage: 'Build'
+  jobs: 
+  - job: 
 
 
+    steps:
+       - task: DotNetCoreCLI@2
+         displayName: 'Build'
+         inputs:
+          command: build
+          configuration: '--configuration $(BuildConfiguration)'
+
+
+       - task: DotNetCoreCLI@2
+         displayName: 'Restore'
+         inputs:
+          command: Restore      
+
+
+       - task: DotNetCoreCLI@2
+         displayName: 'Publish'
+         inputs:
+          command: publish
+          arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+          publishWebProjects: false
+          zipAfterPublish: false
+          modifyOutputPath: false 
+
+- stage: 'Test'
+  jobs:
+  - job: 
+    steps:
+        - task: DotNetCoreCLI@2
+          displayName: 'Selenium run'
+          inputs:
+           command: custom
+           projects: '**/SeleniumDemo.dll'
+           custom: vstest
+           arguments: '--logger:trx;logfilename=TEST.xml'
+    
+        - task: PublishTestResults@2
+          displayName: 'Publish run results'
+          inputs:
+           testResultsFormat: VSTest
+           testResultsFiles: '**/TEST.xml'
+           mergeTestResults: true
+
+     
