--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
+
+resources:
+  containers:
+  - container: 'DotNetImage'
+    image: 'mcr.microsoft.com/dotnet/core/sdk:3.1'
+
 trigger:
 - master
 
@@ -6,6 +12,7 @@ pool:
 
 variables:
  BuildConfiguration: 'Release'
+ 
 
 stages:
 - stage: 'Build'
