--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
           displayName: 'Selenium run'
           inputs:
            command: custom
-           projects: '**/SeleniumDemoYAML.dll'
+           projects: '*/*.csproj'
            custom: vstest
            arguments: '--logger:trx;logfilename=TEST.xml'
     
