Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,11 +47,10 @@ stages:
   jobs:
   - job: 
     steps:
-        - task: CopyFiles@2
+        - task: DownloadBuildArtifacts@0
           inputs:
-            SourceFolder: '$(system.defaultworkingdirectory)'
-            Contents: '**/SeleniumDemoYAML.dll'
-            TargetFolder: '$(build.artifactstagingdirectory)'
+            buildType: current
+           
         - task: DotNetCoreCLI@2
           displayName: 'Selenium run'
           inputs:
