--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,10 +38,11 @@ stages:
          displayName: 'Publish'
          inputs:
           command: publish
-          arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
           publishWebProjects: false
+          arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
           zipAfterPublish: false
           modifyOutputPath: false 
+          
 
 - stage: 'Test'
   jobs:
@@ -50,6 +51,9 @@ stages:
         - task: DownloadBuildArtifacts@0
           inputs:
             buildType: current
+            artifactName: 'drop'
+            pipeline: 'Azure Pipelines'
+            downloadPath: '$(System.ArtifactsDirectory)' 
            
         - task: DotNetCoreCLI@2
           displayName: 'Selenium run'
