Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,10 @@ stages:
          displayName: 'Publish Artifact'
          inputs:
           PathtoPublish: '$(build.artifactstagingdirectory)'
+          ArtifactName: 'drop'
+          publishLocation: Container
          condition: succeededOrFailed()
+
 
           
 
