Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,12 @@ stages:
   - job: 
     steps:
         
+        - task: DownloadBuildArtifacts@0
+          displayName: 'Download Artifcats'
+          inputs:
+           project: 'SeleniumDotNetCoreDemoYAML'
+           pipeline: 'SeleniumDotNetCoreDemoYAML-ASP.NET Core-CI'
+           artifactName: 'drop'
            
         - task: DotNetCoreCLI@2
           displayName: 'Selenium run'
