Updating chrome driver

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ $RECYCLE.BIN/
 *.msp
 /.vs/SeleniumDemoYAML/v16/TestStore/0/000.testlog
 /.vs/SeleniumDemoYAML/v16/TestStore/0/testlog.manifest
+/.vs/SeleniumDemoYAML/DesignTimeBuild
